--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.37.0",
     "react-icons": "^4.6.0",
+    "react-modal": "^3.15.1",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
