--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# http://localhost:8082 
-REACT_APP_BASE_URL="https://torfs-art-gallery.herokuapp.com"
+# "http://localhost:8082" 
+REACT_APP_BASE_URL=https://torfs-art-gallery.herokuapp.com 
