--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-# "http://localhost:8082" 
-REACT_APP_BASE_URL=https://torfs-art-gallery.herokuapp.com 
+REACT_APP_BASE_URL=http://localhost:8082/api
