--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_BASE_URL=http://localhost:8081/api
+# http://localhost:8081/api
+REACT_APP_BASE_URL=https://torfs-art-gallery.herokuapp.com
