--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "axios": "^1.1.2",
     "bootstrap": "^5.2.2",
     "emailjs-com": "^3.2.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.5.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.38.0",
     "react-icons": "^4.6.0",
