--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.1.2",
     "bootstrap": "^5.2.2",
     "emailjs-com": "^3.2.0",
+    "loader-utils": "^3.2.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
